# recipe-app-api

./: .flake8  .gitignore  .travis.yml  Dockerfile  LICENSE  README.md  local.env  pyproject.toml
boilerplate/: settings.py  urls.py
core/: admin.py  factories.py  models.py
core/management/commands/: wait_for_db.py
core/migrations/: 0001_initial.py  0002_tag.py  0003_ingredient.py  0004_recipe.py  0005_recipe_image.py
core/tests/: test_admin.py  test_commands.py  test_models.py
docker/: .env  dc-backup-db.sh  dc-exec.sh  dc-manage.sh  dc-poetry.sh  dc-restore-db.sh  dc-start-local-env.sh  docker-compose.yml
main/: settings.py  urls.py  wsgi.py
recipe/: serializers.py  urls.py  views.py
recipe/tests/: test_ingredients_api.py  test_recipe_api.py  test_tags_api.py
user/: serializers.py  urls.py  views.py
user/tests/: test_user_api.py
