[tool.poetry]
name = "django_boilerplate"
version = "0.1.0"
description = ""
authors = ["Rayhan Muktader <rmuktader@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2"
django-extensions = "^3.1.2"

[tool.poetry.dev-dependencies]
ptvsd = "^4.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
