[tool.poetry]
name = "django_boilerplate"
version = "0.1.0"
description = ""
authors = ["Rayhan Muktader <rmuktader@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2"
django-extensions = "^3.1.2"
psycopg2 = "^2.8.6"
djangorestframework = "^3.12.4"
Pillow = "^8.3.1"
django-rest-swagger = "^2.2.0"

[tool.poetry.dev-dependencies]
ptvsd = "^4.3.2"
black = "^21.4b2"
isort = "^5.8.0"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
